added bootstrap css and js

--- a/index.html
+++ b/index.html
@@ -1,10 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Jack Huang</title>
-  <link rel="stylesheet" type="text/css" href="/css/style.css">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width = device-width, initial-scale = 1">
+
+  <title>Jack Huang's Web Resume</title>
+  <link rel="stylesheet" href="assets/css/bootstrap.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
-  <h1>Why isnt this working?!?</h1>
+  <div id="headerwrap">
+    <img class="profile" src="assets/img/profile.jpg"/>
+    <h1>Jack Huang</h1>
+    <h4>Software Engineer</h4>
+  </div>
+  <div id="portfoliowrap"></div>
+  <div id="social"></div>
+  <div id="footerwrap"></div>
+
+
+  <script
+  src="https://code.jquery.com/jquery-3.2.1.min.js"
+  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+  crossorigin="anonymous"></script>
+  <script src="assets/js/bootstrap.min.js"></script>
 </body>
 </html>
