added header and font-awesome

--- a/index.html
+++ b/index.html
@@ -7,13 +7,40 @@
 
   <title>Jack Huang's Web Resume</title>
   <link rel="stylesheet" href="assets/css/bootstrap.css">
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
   <div id="headerwrap">
-    <img class="profile" src="assets/img/profile.jpg"/>
-    <h1>Jack Huang</h1>
-    <h4>Software Engineer</h4>
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="text-center" id="header-photo">
+            <div id="photo">
+              <img src="assets/img/profile.jpg"/>
+            </div>
+            <div id="header-text">
+              <h1>
+                <span class="name">Jack Huang</span> <br>
+                <span class="tagline">Software Engineer</span>
+              </h1>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div id="about">
+    <div class="container">
+      <div class="row mt mb">
+        <h2>
+          <i class="fa fa-user"></i>
+          About</h2>
+        <p>
+
+        </p>
+      </div>
+    </div>
   </div>
   <div id="portfoliowrap"></div>
   <div id="social"></div>
