Web Resume commit

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <title>Jack Huang's Web Resume</title>
   <link rel="stylesheet" href="assets/css/bootstrap.css">
-  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
@@ -30,6 +30,36 @@
       </div>
     </div>
   </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12 col-sm-7">
+        <!-- ABOUT ME -->
+        <div class="box">
+          <h2>
+            <i class="fa fa-user ico"></i>
+            About
+          </h2>
+          <p>
+            "I am a electrical engineering graduate from UBC who have a lot of passion for
+            software science.
+            "
+          </p>
+        </div>
+        <!-- WORK EXPERIENCE -->
+        <div class="box">
+          <h2>
+            <i class="fa fa-suitcase ico"></i>
+            Word Experience
+          </h2>
+
+        </div>
+        <!-- TECHNICAL PROJECTS1 -->
+      </div>
+      <div class="col-xs-12 col-sm-5">
+
+      </div>
+    </div>
+  </div>
   <div id="about">
     <div class="container">
       <div class="row mt mb">
@@ -37,12 +67,61 @@
           <i class="fa fa-user"></i>
           About</h2>
         <p>
-
+          Hi!
         </p>
       </div>
     </div>
   </div>
-  <div id="portfoliowrap"></div>
+  <div id="portfoliowrap">
+    <div class="container">
+      <div id="skill-chart" class="clearfix">
+        <h3 class="chart-title">
+          <span>My Skills</span>
+        </h3>
+        <ul class="chart-legend">
+          <li id="label101" style="height: 54px;">
+            <span class="legend-label">
+              <stong>Uh?</stong>
+              <br>
+              "Next Question?"
+            </span>
+          </li>
+          <li id="label102" style="height: 54px;">
+            <span class="legend-label">
+              <stong>Basic</stong>
+              ", you can't"
+              <br>
+              "always win..."
+            </span>
+          </li>
+          <li id="label103" style="height: 54px;">
+            <span class="legend-label">
+              <stong>Medium</stong>
+              ", I'm trying"
+              <br>
+              "to improve."
+            </span>
+          </li>
+          <li id="label104" style="height: 54px;">
+            <span class="legend-label">
+              <stong>High</stong>
+              ","
+              <br>
+              "I'm pretty good."
+            </span>
+          </li>
+          <li id="label105" style="height: 54px;">
+            <span class="legend-label">
+              "I'm the "
+              <stong>master</stong>
+              <br>
+              "of the universe."
+            </span>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
   <div id="social"></div>
   <div id="footerwrap"></div>
 
