Finished HTML left column

--- a/index.html
+++ b/index.html
@@ -49,82 +49,148 @@
         <div class="box">
           <h2>
             <i class="fa fa-suitcase ico"></i>
-            Word Experience
+            Work Experience
           </h2>
+          <div class="job clearfix">
+            <div class="row">
+              <div class="general-details">
+                <div class="name">
+                  Motion Metrics Inc.
+                </div>
+                <div class="address">
+                  <a href="http://www.motionmetrics.com/" target="_blank">
+                    <i class="fa fa-globe ico"></i>
+                    http://www.motionmetrics.com/
+                  </a>
+                </div>
+                <div class="duration">
+                  September 2015 - May 2016
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="specific-details">
+                <div class="position">
+                  System Engineer
+                </div>
+                <div class="description">
+                  <ul class="list-group">
+                    <li class="list-group-item">Designed microcontrollers using the ATmega2560 chip to monitors and
+                       record the status of company’s ShovelMetrics product</li>
+                    <li class="list-group-item">Programmed the microcontroller’s firmware using C to monitor the internal
+                      temperature, control the cooling unit, gather and record data from the 9-axis motion sensor</li>
+                    <li class="list-group-item">Tested both the microcontroller and the ShovelMetrics units; collected and
+                      analyzed the data to improve the thermal performance of the ShovelMetrics</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="job clearfix">
+            <div class="row">
+              <div class="company-details">
+                <div class="name">
+                  Athabasca University
+                </div>
+                <div class="address">
+                  <a href="http://www.athabascau.ca/" target="_blank">
+                    <i class="fa fa-globe ico"></i>
+                    http://www.athabascau.ca/
+                  </a>
+                </div>
+                <div class="duration">
+                  May 2015 - September 2015
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="job-details">
+                <div class="position">
+                  Reseach Assistant
+                </div>
+                <div class="description">
+                  <ul class="list-group">
+                    <li class="list-group-item">Researched on different resource allocation and winner determination
+                      algorithms</li>
+                    <li class="list-group-item">Prototyped a working winner determination search algorithm using Java
+                      and knowledge of data structure and algorithms</li>
+                    <li class="list-group-item">Created written documents for the algorithm, listing its pros and cons</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
 
         </div>
         <!-- TECHNICAL PROJECTS1 -->
+        <div class="box">
+          <h2>
+            <i class="fa fa-lightbulb-o ico"></i>
+            Projects
+          </h2>
+          <div class="project">
+            <div class="row">
+              <div class="general-details">
+                <div class="name">
+                  Lifi Indoor Positioning
+                </div>
+                <div class="duration">
+                  September 2016 - April 2017
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="specific-details">
+                <div class="description">
+                  <div class="list-group">
+                    <div class="list-group-item">Collaborated with a team of five to develop a prototype of
+                      indoor positioning Android application using visual light communication techniques that allow
+                      mobile phones to recognize data sent by light and thus pinpointing the location of the user</div>
+                    <div class="list-group-item">Integrated the transmission (Arduino controller) and reception
+                      (Android phone) protocol that enables the devices to establish a connection and send/receive
+                      data from LED to photodiode</div>
+                    <div class="list-group-item">Utilized Android Studio and Java to design and implement the
+                      front-end interface of the application that is simple and responsive</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="project">
+            <div class="row">
+              <div class="general-details">
+                <div class="name">
+                  Tele-Operated Master/Slave Robot Arm
+                </div>
+                <div class="duration">
+                  January 2015 - April 2015
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="specific-details">
+                <div class="description">
+                  <div class="list-group">
+                    <div class="list-group-item">Collaborated with a team of 4 to create a 2 degree of freedom
+                      tele-operated robotic arm that will track the position of a passive master controller by
+                      integrating the actuator, sensor, current driver, and controller </div>
+                    <div class="list-group-item">Designed a PID controller with C to obtain fast response and
+                      settling time of the motor's position</div>
+                    <div class="list-group-item">Implemented wireless control of the robot arm by using AndroidRC
+                      App to send command to HC06 Bluetooth module then send the data to microcontroller through
+                      UART protocol </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
       <div class="col-xs-12 col-sm-5">
-
+        
       </div>
     </div>
   </div>
-  <div id="about">
-    <div class="container">
-      <div class="row mt mb">
-        <h2>
-          <i class="fa fa-user"></i>
-          About</h2>
-        <p>
-          Hi!
-        </p>
-      </div>
-    </div>
-  </div>
-  <div id="portfoliowrap">
-    <div class="container">
-      <div id="skill-chart" class="clearfix">
-        <h3 class="chart-title">
-          <span>My Skills</span>
-        </h3>
-        <ul class="chart-legend">
-          <li id="label101" style="height: 54px;">
-            <span class="legend-label">
-              <stong>Uh?</stong>
-              <br>
-              "Next Question?"
-            </span>
-          </li>
-          <li id="label102" style="height: 54px;">
-            <span class="legend-label">
-              <stong>Basic</stong>
-              ", you can't"
-              <br>
-              "always win..."
-            </span>
-          </li>
-          <li id="label103" style="height: 54px;">
-            <span class="legend-label">
-              <stong>Medium</stong>
-              ", I'm trying"
-              <br>
-              "to improve."
-            </span>
-          </li>
-          <li id="label104" style="height: 54px;">
-            <span class="legend-label">
-              <stong>High</stong>
-              ","
-              <br>
-              "I'm pretty good."
-            </span>
-          </li>
-          <li id="label105" style="height: 54px;">
-            <span class="legend-label">
-              "I'm the "
-              <stong>master</stong>
-              <br>
-              "of the universe."
-            </span>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </div>
-  <div id="social"></div>
-  <div id="footerwrap"></div>
-
 
   <script
   src="https://code.jquery.com/jquery-3.2.1.min.js"
