commit webResume contact html

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
           </div>
 
         </div>
-        <!-- TECHNICAL PROJECTS1 -->
+        <!-- TECHNICAL PROJECTS -->
         <div class="box">
           <h2>
             <i class="fa fa-lightbulb-o ico"></i>
@@ -187,7 +187,51 @@
         </div>
       </div>
       <div class="col-xs-12 col-sm-5">
-        
+        <!-- CONTACT -->
+        <div class="box clearfix">
+          <h2>
+            <i class="fa fa-address-book-o ico"></i>
+            Contact
+          </h2>
+          <div class="contact-item">
+            <div class="icon pull-left text-center">
+              <span class="fa fa-map-marker fa-fw"></span>
+            </div>
+            <div class="title pull-right">8640 Citadel Crescent</div>
+            <div class="title pull-right">Richmond, British Columbia, Canada V7c 4T3</div>
+          </div>
+          <div class="contact-item">
+            <div class="icon pull-left text-center">
+              <span class="fa fa-phone fa-fw"></span>
+            </div>
+            <div class="title only pull-right">(778) 829-4638</div>
+          </div>
+          <div class="contact-item">
+            <div class="icon pull-left text-center">
+              <span class="fa fa-envelope fa-fw"></span>
+            </div>
+            <div class="title only pull-right">
+              <a href="mailto:jackhuangxl@gmail.com" target="_blank">
+                jackhuangxl@gmail.com
+              </a>
+            </div>
+          </div>
+          <div class="contact-item">
+            <div class="icon pull-left text-center">
+              <span class="fa fa-github fa-fw"></span>
+            </div>
+            <div class="title pull-right">Github</div>
+            <div class="title pull-right">
+              <a href="https://github.com/jhuang0215" target="_blank">
+                jhuang0215
+              </a>
+            </div>
+          </div>
+        </div>
+        <!-- EDUCATION -->
+
+        <!-- SKILLS -->
+        <!-- INTERESTS -->
       </div>
     </div>
   </div>
