--- a/index.html
+++ b/index.html
@@ -229,7 +229,22 @@
           </div>
         </div>
         <!-- EDUCATION -->
-
+        <div class="box">
+          <h2>
+            <i class="fa fa-university ico"></i>
+            Education
+          </h2>
+          <ul id="education" class="clearfix">
+            <li>
+              <div class pull-left>2012 2017</div>
+              <div class="description pull-right">
+                <h3>University of British Columbia</h3>
+                <p><i class="fa fa-graduation-cap ico"></i>Bachelor</p>
+                <p>Electrical Engineering</p>
+              </div>
+            </li>
+          </ul>
+        </div>
         <!-- SKILLS -->
         <!-- INTERESTS -->
       </div>
