commit webResume skills html

--- a/index.html
+++ b/index.html
@@ -246,6 +246,45 @@
           </ul>
         </div>
         <!-- SKILLS -->
+        <div class="box">
+          <h2><i class="fa fa-tasks ico"></i>Skills
+          </h2>
+          <div class="skills clearfix">
+            <div class="item-skills">
+              Programming Language
+            </div>
+            <div class="col-sm-offset-1 col-sm-12 clearfix">
+              <span class="skill badge">Java</span>
+              <span class="skill badge">Python</span>
+              <span class="skill badge">HTML</span>
+              <span class="skill badge">CSS</span>
+              <span class="skill badge">Javascript</span>
+            </div>
+          </div>
+          <div class="skills clearfix">
+            <div class="item-skills">
+              Design & Development
+            </div>
+            <div class="col-sm-offset-1 col-sm-12 clearfix">
+              <span class="skill badge">Datastructure</span>
+              <span class="skill badge">Object Oriented Programming</span>
+              <span class="skill badge">Multithreaded Programming</span>
+              <span class="skill badge">Agile Methodology</span>
+              <span class="skill badge">Android Development</span>
+            </div>
+          </div>
+          <div class="skills clearfix">
+            <div class="item-skills">
+              Electrical and Control
+            </div>
+            <div class="col-sm-offset-1 col-sm-12 clearfix">
+              <span class="skill badge">Microcomputer</span>
+              <span class="skill badge">Integrated Circuit</span>
+              <span class="skill badge">PCB Design</span>
+              <span class="skill badge">Circuit Prototyping</span>
+            </div>
+          </div>
+        </div>
         <!-- INTERESTS -->
       </div>
     </div>
