commit webResume HTML

--- a/index.html
+++ b/index.html
@@ -286,6 +286,31 @@
           </div>
         </div>
         <!-- INTERESTS -->
+        <div class="box">
+          <h2><i class="fa fa-heart ico"></i>Interests</h2>
+          <div class="interests clearfix">
+            <div class="item-interests">
+              Programming
+            </div>
+            <div class="col-sm-offset-1 col-sm-12 clearfix">
+
+              <span class="skill badge">Robotics</span>
+              <span class="skill badge">Algorithms</span>
+            </div>
+          </div>
+          <div class="interests clearfix">
+            <div class="item-interests">
+              Hobbies
+            </div>
+            <div class="col-sm-offset-1 col-sm-12 clearfix">
+              <span class="skill badge">Basketball</span>
+              <span class="skill badge">Fitness</span>
+              <span class="skill badge">Hiking</span>
+              <span class="skill badge">Travel</span>
+              <span class="skill badge">Gaming</span>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
