commit webResume, status finished/added CSS

--- a/index.html
+++ b/index.html
@@ -11,26 +11,22 @@
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
-  <div id="headerwrap">
-    <div class="container">
-      <div class="row">
-        <div class="col-xs-12">
-          <div class="text-center" id="header-photo">
-            <div id="photo">
-              <img src="assets/img/profile.jpg"/>
-            </div>
-            <div id="header-text">
-              <h1>
-                <span class="name">Jack Huang</span> <br>
-                <span class="tagline">Software Engineer</span>
-              </h1>
-            </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12">
+        <div class="text-center" id="header-photo">
+          <div id="photo">
+            <img src="assets/img/profile.jpg"/>
+          </div>
+          <div id="header-text">
+            <h1>
+              <span class="name">Jack Huang</span> <br>
+              <span class="tagline">Software Engineer</span>
+            </h1>
           </div>
         </div>
       </div>
     </div>
-  </div>
-  <div class="container">
     <div class="row">
       <div class="col-xs-12 col-sm-7">
         <!-- ABOUT ME -->
@@ -88,7 +84,7 @@
           </div>
           <div class="job clearfix">
             <div class="row">
-              <div class="company-details">
+              <div class="general-details">
                 <div class="name">
                   Athabasca University
                 </div>
@@ -104,7 +100,7 @@
               </div>
             </div>
             <div class="row">
-              <div class="job-details">
+              <div class="specific-details">
                 <div class="position">
                   Reseach Assistant
                 </div>
@@ -198,7 +194,7 @@
               <span class="fa fa-map-marker fa-fw"></span>
             </div>
             <div class="title pull-right">8640 Citadel Crescent</div>
-            <div class="title pull-right">Richmond, British Columbia, Canada V7c 4T3</div>
+            <div class="title pull-right">Richmond, BC, Canada V7c 4T3</div>
           </div>
           <div class="contact-item">
             <div class="icon pull-left text-center">
@@ -236,7 +232,7 @@
           </h2>
           <ul id="education" class="clearfix">
             <li>
-              <div class pull-left>2012 2017</div>
+              <div class="year pull-left">2012 2017</div>
               <div class="description pull-right">
                 <h3>University of British Columbia</h3>
                 <p><i class="fa fa-graduation-cap ico"></i>Bachelor</p>
