commit LinkedIn link

--- a/index.html
+++ b/index.html
@@ -214,6 +214,17 @@
           </div>
           <div class="contact-item">
             <div class="icon pull-left text-center">
+              <span class="fa fa-linkedin fa-fw"></span>
+            </div>
+            <div class="title pull-right">LinkedIn</div>
+            <div class="title pull-right">
+              <a href="https://linkedin.com/in/jhuang0215" target="_blank">
+                Jack Huang
+              </a>
+            </div>
+          </div>
+          <div class="contact-item">
+            <div class="icon pull-left text-center">
               <span class="fa fa-github fa-fw"></span>
             </div>
             <div class="title pull-right">Github</div>
