--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
             <div class="title pull-right">LinkedIn</div>
             <div class="title pull-right">
               <a href="https://linkedin.com/in/jhuang0215" target="_blank">
-                Jack Huang
+                www.linkedin.com/in/jhuang0215
               </a>
             </div>
           </div>
