completed the ABOUT ME section

--- a/index.html
+++ b/index.html
@@ -36,9 +36,12 @@
             About
           </h2>
           <p>
-            "I am a electrical engineering graduate from UBC who have a lot of passion for
-            software science.
-            "
+            I am a programming enthusiast aiming to become a true software engineer. I spend by free time
+            learning about computer science related subjects such as data structures, algorithms, and machine
+            learning. I also build small tools to make my life easier while learning new framework and technilogies.
+            Utilizing various online resources, I take pride in my ability to self-learn and adapt to different
+            code enviornment based on different specifications. I make sure that I produce the highest quality of
+            work using industry best methods, training myself to become a valueable member in any team.
           </p>
         </div>
         <!-- WORK EXPERIENCE -->
